--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
      color: #243e63;
 }
 
+
 html{
   scroll-behavior: smooth;
 }
@@ -84,4 +85,90 @@ width: 100px;
   color: white;
   border-radius: 9999px;
 padding: 0 12px;
+}
+
+/*header*/
+
+.header__container {
+  padding: 96px;
+  display: flex;
+}
+.header__row {
+  width: 60%;
+  max-width: 1200px;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+}
+.header__description {
+  font-size: 32px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+
+
+}
+.header__description--para {
+  font-size: 24px;
+  margin-bottom: 24px;
+
+}
+.header__email {
+  width: 100%;
+  max-width: 448px;
+  height: 68px;
+  position: relative;
+  margin: 0 auto;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+
+}
+.header__email--input {
+  background-color: #fff;
+
+  padding: 12px 192px 24px 32px;
+  border-radius: 9999px;
+  border: 2px solid rgb(229, 331, 235);
+  font-size: 16px;
+  font-weight: 500;
+position: absolute;
+top: o;
+bottom: 0;
+z-index: 1;
+transition: border-color 300ms ease;
+}
+.header__email--button {
+  z-index: 2;
+  padding: 12px;
+  margin: 8px;
+  height: calc(100%-8px);
+  border-radius: 9999px;
+  width: 160px;
+  font-weight: 70px;
+  font-size: 16px;
+  background-color: #6415ff;
+  color: #fff;
+
+}
+.header__customers--title {
+  margin-top: 80px;
+  color: #a0aec0;
+  font-size: 12px;
+  font-weight: 700;
+  letter-spacing: 0.6;
+
+}
+.header__customer--logo {
+  margin-top: 16px;
+  opacity: .5;
+  width: 60%;
+
+}
+.header__img--wrapper {
+  width: 60%;
+}
+.header__img {
+width: 100%
 }
