--- a/style.css
+++ b/style.css
@@ -16,12 +16,17 @@ body{
   max-width: 100vw;
   overflow-x: hidden;
 }
+.container { 
+  padding: 96px 0;
+}
 
-.row{
+
+row{
 width: 100%;
 max-width: 1200px;
 margin: 0 auto;
 }
+
 row__narrow{
   width: 100%;
   max-width: 1024px;
@@ -171,4 +176,126 @@ transition: border-color 300ms ease;
 }
 .header__img {
 width: 100%
+}
+
+/*
+features 
+*/
+.container {
+  padding: 80px 0;
+  
+}
+.row__narrow {
+ width: 100%;
+  max-width: 1024px;
+  margin: 0 auto;
+}
+.section__tag {
+  font-size: 16px;
+  color: #6415ff;
+  letter-spacing: 1.6;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-align: center;
+
+}
+.features__section--title {
+  font-size: 48px;
+  text-align: center;
+
+}
+.features__section--para {
+  font-size: 16px;
+  text-align: center;
+  
+}
+.features {
+display: flex;
+flex-wrap: wrap;
+margin-top: 40px;
+}
+.feature {
+display: flex;
+width: calc(100%/3);
+}
+.feature__row {
+  display: flex;
+  flex-direction: column;
+  color: #243e63;
+  margin: 0 16px;
+  padding: 32px 8px;
+
+}
+.feature__img--wrapper {
+padding: 20px;
+}
+.feature__text {
+margin: 8px 0 0 16px;
+}
+.feature__title {
+font-size: 24px;
+}
+.feature__para {
+  font-size: 16px;
+  margin: 16px 0 0;
+
+}
+
+/*
+
+quality
+*/
+
+.quality__container {
+padding: 96px 0;
+}
+.quality__row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+max-width: 1200px;
+margin: 0 auto;
+
+}
+.quality__description {
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+
+}
+.quality__section--tag {
+  font-size: 16px;
+  color: #6415ff;
+  letter-spacing: 1.6;
+  font-weight: 700;
+  text-transform: uppercase;
+
+}
+.quality__section--title {
+  font-size: 32px;
+  line-height: 1.25;
+
+}
+.quality__section--para {
+  font-size: 16px;
+
+}
+.quality__btn {
+  max-width: 150px;
+  margin-top: 32px;
+  background-color:#6415ff;
+  color: #fff;
+  padding: 12px 32px;
+  border: none;
+  border-radius: 9999px;
+  font-size: 14px;
+
+}
+.quality__img--wrapper {
+  width: 50%;
+
+}
+.quality__img {
+width: 100%;
 }
