--- a/style.css
+++ b/style.css
@@ -299,3 +299,76 @@ margin: 0 auto;
 .quality__img {
 width: 100%;
 }
+/*
+steps
+*/
+
+.steps {
+  padding: 0 32px;
+}
+.steps__container {
+  padding: 96px 0 ;
+}
+.steps__row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.steps__img--wrapper {
+  display: flex;
+  position: relative;
+}
+.steps__description, .steps__img--wrapper {
+  width: 50%;
+}
+.steps__description {
+  padding: 32px 0;
+  padding-left: 64px;
+}
+.steps__tag {
+  font-size: 16px;
+  color: #6415ff;
+  letter-spacing: 1.6;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+.steps__title {
+  font-size: 36px;
+}
+.steps__list {
+  display: flex;
+  flex-direction: column;
+  
+}
+.step {
+  display: flex;
+  align-items: flex-start;
+  margin-top: 32px;
+}
+.step__number {
+  color: #cbd5e0;
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 1;
+}
+.step__description {
+  display: flex;
+  flex-direction: column;
+  margin-left: 24px;
+
+}
+.step__title {
+  font-weight: 600;
+  font-size:20px ;
+  color: #243e63;
+  line-height: 1;
+}
+.step__para {
+  font-size: 14px;
+  color: #718096;
+  margin-top: 12px;
+  font-weight: 500;
+  line-height: 2;
+}
+
