--- a/style.css
+++ b/style.css
@@ -339,7 +339,7 @@ steps
 .steps__list {
   display: flex;
   flex-direction: column;
-  
+
 }
 .step {
   display: flex;
@@ -370,5 +370,112 @@ steps
   margin-top: 12px;
   font-weight: 500;
   line-height: 2;
+}
+
+/* 
+
+values
+
+*/
+#values {
+  padding: 0 32px;
+}
+
+.values__container {
+  padding: 96px 0;
+
+}
+.values__row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+.values__description, .values__img {
+  width: 50%;
+
+}
+.values__description {
+  padding: 32px 64px 32px 0;
+}
+.values__tag {
+  font-size: 16px;
+  color: #6415ff;
+  letter-spacing: 1.6;
+  font-weight: 700;
+  text-transform: uppercase;
+
+}
+.values__title {
+  margin-top: 16px;
+  margin-bottom: 32px;
+  line-height: 1.25;
+font-size: 36px;
+}
+.values__para {
+  font-size: 16px;
+
+}
+.values__list {
+  display: flex;
+  flex-direction: column;
+  max-width: 320px;
+
+}
+.value:nth-child(1) ,.value:nth-child(2) {
+  margin-top: 40px;
+  margin-right: 32px;
+
+}
+.value__title {
+  display: flex;
+  align-items: center;
+}
+.value__img--wrapper1{
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 36px;
+  height: 36px;
+  background-color: #9ae6b4; 
+}
+.value__img--wrapper2{
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 36px;
+  height: 36px;
+  background-color: peachpuff; 
+
+}
+.value__name {
+  margin-left: 12px;
+  font-size: 20px;
+  font-weight: bold;
+color: #243e63;
+}
+.value__para {
+  margin-top: 16px;
+  line-height: 1.625;
+  color: #718096;
+
+
+}
+.values__btn {
+  margin-top: 48px;
+  padding: 12px 32px;
+  border: none;
+border-radius: 500px;
+color: #fff;
+background-color: #6415ff;
+font-size: 14px;
+font-weight: bold;
+transition: all 300ms ease;
+
+}
+.values__img {
+
 }
 
