--- a/style.css
+++ b/style.css
@@ -21,13 +21,13 @@ body{
 }
 
 
-row{
+.row{
 width: 100%;
 max-width: 1200px;
 margin: 0 auto;
 }
 
-row__narrow{
+.row__narrow{
   width: 100%;
   max-width: 1024px;
   margin: 0 auto;
@@ -413,13 +413,14 @@ values
 font-size: 36px;
 }
 .values__para {
+  margin-bottom: 24px;
   font-size: 16px;
 
 }
 .values__list {
   display: flex;
-  flex-direction: column;
-  max-width: 320px;
+flex-direction: column;
+max-width: 320px;
 
 }
 .value:nth-child(1) ,.value:nth-child(2) {
@@ -428,10 +429,12 @@ font-size: 36px;
 
 }
 .value__title {
+  margin-top: 20px;
+  margin-right: 32px;
   display: flex;
   align-items: center;
 }
-.value__img--wrapper1{
+.value__img--wrapper1 , .value:nth-child(1) {
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -440,14 +443,14 @@ font-size: 36px;
   height: 36px;
   background-color: #9ae6b4; 
 }
-.value__img--wrapper2{
+.value__img--wrapper2 ,.value:nth-child(2) {
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 36px;
   height: 36px;
-  background-color: peachpuff; 
+  background-color: #feb2b2; 
 
 }
 .value__name {
@@ -476,6 +479,15 @@ transition: all 300ms ease;
 
 }
 .values__img {
-
+  width: 50%;
 }
+
+/*
+
+pricing
+
+*/
+
+
+
 
