--- a/style.css
+++ b/style.css
@@ -487,7 +487,89 @@ transition: all 300ms ease;
 pricing
 
 */
+.section {
+  padding: 0 32px;
+}
+.pricing__container {
+  padding: 96px 0;
+
+}
+.pricing__row {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+
+}
+.pricing__section--tag {
+  font-size: 16px;
+  color: #6415ff;
+  letter-spacing: 1.6;
+  font-weight: 700;
+  text-transform: uppercase;
+
+}
+.pricing__section--title {
+  font-size: 48px;
+
+}
+
+.pricing__section--para {
+font-size: 16px;
+max-width: 576px;
+text-align: center;
+}
+.plans {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  position: relative;
+  z-index: 100;
+
+}
+.plan {
+width: 100%;
+max-width: 384px;
+margin: 64px 32px 0 0;
+padding-top: 8px;
+border-radius: 8px;
+overflow: hidden;
+position: relative;
+z-index: 100;
+
+}
+.plan__stripe {
+color: #f7fafc;
+background: linear-gradient(
+  115deg, rgb( 56, 178, 172) 0% , rgb( 129, 230, 217) 100%) ;
 
 
+}
+.plan__top {
 
+}
+.plan__name {
 
+}
+.plan__price {
+
+}
+.plan__duration {
+
+}
+.plan__middle {
+
+}
+.plan__target {
+
+}
+.plan__feature {
+}
+.plan__bottom {
+
+}
+.plan__button {
+
+}
