--- a/style.css
+++ b/style.css
@@ -529,6 +529,27 @@ text-align: center;
   z-index: 100;
 
 }
+.plan:nth-child(2) {
+  background: linear-gradient(135deg, rgb( 76, 81,191)0%,
+  rgb(102, 126,234)100%
+  );
+}
+.plan:nth-child(2) .plan__stripe,
+.plan:nth-child(2) .plan__price,
+.plan:nth-child(2) .plan__name,
+.plan:nth-child(2) .plan__price,
+.plan:nth-child(2) .plan__duration, 
+.plan:nth-child(2) .plan__target, 
+.plan:nth-child(2) .plan__feature {
+  color: #f7fafc;
+}
+.plan:nth-child(3) .plan__stripe,
+.plan:nth-child(3) .plan__button {
+  color: #f7fafc;
+  background: linear-gradient(115deg, rgb(245, 101,101)0%,
+  rgb(254, 178,178)100%);
+
+}
 .plan {
 width: 100%;
 max-width: 384px;
@@ -544,32 +565,85 @@ z-index: 100;
 color: #f7fafc;
 background: linear-gradient(
   115deg, rgb( 56, 178, 172) 0% , rgb( 129, 230, 217) 100%) ;
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 8px;
 
-
+}
+.plan:nth-child(2) .plan__stripe {
+  visibility: hidden;
 }
 .plan__top {
-
+padding: 32px;
+text-align: center;
 }
 .plan__name {
+  font-size: 20px;
+  color: #1a202c;
 
 }
 .plan__price {
+  font-size: 48px;
+  margin: 4px 0;
 
 }
 .plan__duration {
-
+  font-size: 16px;
+  letter-spacing: 0.1;
+  font-weight: bold;
+  line-height: 1.625;
+color: #a0aec0;
 }
 .plan__middle {
+  padding: 32px;
+  text-align: center;
+  border-top: 2px solid rgb( 229,231,235);
+  border-bottom: 2px solid rgb(229, 231,235) ;
 
 }
 .plan__target {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.5;
+  letter-spacing: 0.025em;
 
 }
 .plan__feature {
+  margin-top: 20px;
+  font-weight: 500;
+  color: #718096;
+  font-size: 16px;
+  line-height: 1.5;
 }
 .plan__bottom {
+  padding: 32px 64px;
+  position: relative;
+  text-align: center;
+  z-index: 10;
 
 }
 .plan__button {
+  width: 100%;
+  padding: 16px 32px;
+  border: none;
+  border-radius: 500px;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: bold;
+  letter-spacing: 0.05em;
+  line-height: 1.5;
+  transition: all 300ms ease;
+  cursor: pointer;
+  color: #f7fafc;
+  background: linear-gradient( 115deg,
+   rgb(56, 178, 172) 0%,
+   rgb(129, 230, 217)100%);
 
+}
+.plan:nth-child(2) .plan__button {
+  color: #6415ff;
+  background: #f7fafc;
 }
