--- a/style.css
+++ b/style.css
@@ -647,3 +647,216 @@ color: #a0aec0;
   color: #6415ff;
   background: #f7fafc;
 }
+
+/*
+
+testimonials
+
+*/
+.testimonials__section {
+padding: 0 32px;
+}
+
+.testimonial__container {
+padding: 96px 0;
+}
+.testimonial__row {
+  display: flex;
+  max-width: 1024px;
+  margin: 0 auto;
+
+}
+.testimonial__img--wrapper {
+  padding-top: 80px;
+  width: 100%;
+}
+.testimonial__img {
+  width: 100%;
+}
+.testimonials__description {
+  display: flex;
+  flex-direction: column;
+  padding-left: 64px;
+
+}
+.section__tag {
+  font-size: 16px;
+  color: #6415ff;
+  letter-spacing: 1.6;
+  font-weight: 700;
+  text-transform: uppercase;
+
+}
+.section__title {
+  margin: 16px 0 24px 0;
+  font-size: 48px;
+  font-weight: 900;
+  color: rgb(36,62,99);
+  line-height: 1.25;
+  letter-spacing: 0.025;
+
+
+}
+.section__para {
+  font-size: 18px;
+  font-weight: 500;
+  color: #7c8ba1;
+  line-height: 1.625;
+  
+
+}
+  
+.testimonial {
+margin-top: 40px;
+}
+.testimonial__rating i {
+  margin: 4px 2px 0 12px;
+  color: rgba(246, 173, 85);
+  font-weight: 900;
+}
+
+.testimonial__title {
+  font-size: 20px;
+  font-weight: 700;
+  color: #243e63;
+  line-height: 1.5;
+
+}
+.testimonial__para {
+margin: 16px 0 40px 0 ;
+font-size: 16px;
+font-weight: 500;
+color: #4a5568;
+line-height: 1.625;
+
+}
+.testimonial__bottom {
+  display: flex;
+  justify-content: space-between;
+
+}
+.testimonial__profile {
+display: flex;
+align-items: center;
+}
+.testimonial__img2 {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+}
+.testimonial__name {
+font-size: 20px;
+font-weight: 700;
+color: #243e63;
+line-height: 1.5;
+}
+.testimonial__title {
+font-size: 16px;
+font-weight: 500;
+color: #7c8ba1;
+line-height: 1.5;
+}
+.testimonial__buttons {
+  display: flex;
+  align-items: center;
+
+}
+.testimonial__button {
+display: flex;
+align-items: center;
+justify-content: center;
+padding: 16px;
+margin: 0 12px;
+border-radius: 50%;
+background: #edf2f7;
+transition: all 300ms ease;
+border: none;
+cursor: pointer;
+}
+.button__divider {
+width: 1px;
+height: 24px;
+background: rgb(229, 231, 235);
+
+}
+/*
+ {
+
+start
+
+*/
+
+.start__container {
+padding: 96px 0;
+width: 100%;
+display: flex;
+justify-content: center;
+align-items: center;
+background-color: rgb(100, 21, 255);
+}
+.start__row {
+margin: 0 auto;
+padding: 0 32px;
+width: 100%;
+max-width: 1024px;
+display: flex;
+justify-content: center;
+align-items: center;
+
+}
+.start__title {
+  width: 50%;
+  font-size: 30px;
+  font-weight: 700;
+  color: #f7fafc;
+  line-height: 1.5;
+  z-index: 2;
+
+}
+.start__buttons--container {
+  width: 50%;
+  display: flex;
+  justify-content: flex-end;
+
+}
+.start__button {
+padding: 20px 40px;
+border-radius: 500px;
+font-weight: 700;
+font-size: 16px;
+color: #f7fafc;
+line-height: 1.5;
+letter-spacing: 0.o25em;
+margin: 1px;
+z-index: 2;
+border: none;
+cursor: pointer;
+
+}
+.start__button:nth-child(1) {
+  margin-right: 32px;
+  background: #f56565;
+  box-shadow: rgba(0,0,0,0) 0px 0px 0px 0px,
+  rgba(0,0,0,0) 0px 0px 0px 0px,
+  rgba(o,0,0,0.1) 0px 10px 15px -3px,
+  rgba(0,0,0,0.05) 0px 4px 6px -2px;
+  transition: all 300ms ease;
+}
+.start__button:hover:nth-child(1) {
+  background-color: rgba(229, 62, 62);
+}
+.start__button:nth-child(2) {
+border: 1px solid rgba(160, 174,192);
+color: #f7fafc;
+background-color:#6415ff;
+transition: all 300ms ease;
+
+}
+.start__button:hover:nth-child(2) {
+color: rgba(100, 21, 255);
+background-color: rgba(247, 250,252);
+
+}
+
+
+
